@@ -1,7 +1,7 @@
 # -*- Mode: Python -*-
 # vi:si:et:sw=4:sts=4:ts=4
 
-from things.common import log
+from mushin.common import log
 
 import datetime
 
