@@ -1,5 +1,17 @@
 2009-12-08  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* python/mushin/command/display.py:
+	* python/mushin/command/list.py:
+	* python/mushin/command/main.py:
+	* python/mushin/command/project.py:
+	* python/mushin/command/replicate.py:
+	* python/mushin/command/thing.py:
+	* python/mushin/common/log.py:
+	* python/mushin/common/logcommand.py:
+	  Rename imports.
+
+2009-12-08  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* Renamed to mushin.
 
 2009-11-21  Thomas Vander Stichele  <thomas at apestaart dot org>
